# piccione

./: CHANGELOG.md  LICENSE.md  README.md  REUSE.toml  pyproject.toml
.github/workflows/: deploy-docs.yml  pyright.yml  release.yml  ruff.yml  tests.yml
docs/: README.md  astro.config.mjs  package-lock.json
docs/src/content/docs/: getting_started.md  index.mdx
docs/src/content/docs/download/: figshare.md  sharepoint.md
docs/src/content/docs/upload/: figshare.md  internet_archive.md  triplestore.md  zenodo.md
examples/: figshare_upload.yaml  internet_archive_upload.yaml  sharepoint_download.yaml  zenodo_upload.yaml
src/piccione/: __init__.py
src/piccione/download/: from_figshare.py  from_sharepoint.py
src/piccione/upload/: cache_manager.py  on_figshare.py  on_internet_archive.py  on_triplestore.py  on_zenodo.py
tests/: conftest.py  from_figshare_test.py  from_sharepoint_test.py  on_figshare_test.py  on_internet_archive_test.py  on_triplestore_test.py  on_zenodo_test.py  test_example.py
