[project]
name = "piccione"
version = "0.1.0"
description = "A Python toolkit for uploading and downloading data to external repositories and cloud services."
authors = [{name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"}]
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/arcangelo7/piccione"
Documentation = "https://arcangelo7.github.io/piccione/"
Repository = "https://github.com/arcangelo7/piccione"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
