[project]
name = "piccione"
version = "3.1.1"
description = "A Python toolkit for uploading and downloading data to external repositories and cloud services."
authors = [{name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"}]
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "internetarchive>=5.7.1",
    "pyyaml>=6.0.3",
    "redis>=4.5.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sparqlite>=1.0.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/opencitations/piccione"
Documentation = "https://opencitations.github.io/piccione/"
Repository = "https://github.com/opencitations/piccione"

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "pyright>=1.1.409",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "reuse>=6.2.0",
    "ruff>=0.15.14",
    "virtuoso-utilities>=1.8.3",
]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "ANN",     # annotations (pyright handles this)
    "ERA",     # eradicate
    "T20",     # print (CLI tool)
    "FBT",     # boolean trap
    "TD",      # todo comments
    "FIX",     # fixme comments
    "S",       # bandit (false positives: md5 for checksums, test passwords, subprocess)
    "INP",     # implicit namespace packages
    "COM812",  # trailing comma (formatter conflict)
    "CPY",     # copyright (REUSE handles this)
    "DOC",     # docstring coverage
    "PD",      # pandas
    "DJ",      # django
    "AIR",     # airflow
    "NPY",     # numpy
    "FAST",    # fastapi
    "LOG",     # logging (uses print)
    "TRY003",  # long exception messages
    "PTH",     # pathlib (codebase uses os.path consistently, conversion is a separate task)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",   # unused function arguments (fixtures for side effects)
    "ARG002",   # unused method arguments (fixtures for side effects)
    "ARG005",   # unused lambda arguments
    "PLR2004",  # magic values in assertions
    "SIM117",   # nested with statements (deeply nested mock.patch is more readable)
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
